--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Dennis Prasad | Developer</title>
-<!--  <link rel="stylesheet" href="bootstrap.css">  -->
+  <link rel="stylesheet" href="bootstrap.css">
    <link rel="stylesheet" type="text/css" href="styler.css">
    <link rel="icon" href="icon.png">
 </head>
@@ -36,9 +36,59 @@
   </p>
   <br>
   <hr id="liner1">
-  <br>
-  <h2>Education</h2>
 
+  <h2>Education</h2>
+  <p>
+    <h5>Bachelor of Engineering - Electronics and Communication (2016-2020)</h5>
+        Sir M. Visvesvaraya Institute of Technology, Bangalore.<br> CGPA: 7.20
+  </p>
+  <p>
+    <h5>II PUC (2015-2016)</h5>
+        Narayana PU College.<br>Percentage: 92.66%
+  </p>
+  <p>
+    <h5>SSLC (2013-2014)</h5>
+        St. Claret School. <br> Percentage: 95.04%
+  </p>
+<hr>
+<h2>Technical Skills</h2>
+  <ul>
+    <li>Operating Systems (Windows and Linux)</li>
+    <li>Object Oriented Programming Languages: C++, Core Java and Python.</li>
+    <li>Front-End Web Development (HTML5, CSS3, JavaScript ES6, JQuery). </li>
+    <li>SQL based RDBMS like MySQL, SQLite, and PostgreSQL. </li>
+    <li>NoSQL based DBMS like MongoDB. </li>
+    <li>Familiar working on CLIs like Bash, Hyper, CMD and GitBash. </li>
+    <li>Git, GitHub and Version Control including Local and Remote Repositories, Gitignore, Cloning,
+        Branching and Merging. </li>
+    <li>C, Embedded C.</li>
+    <li>Automotive electronics, Verilog and VHDL fundamentals.</li>
+  </ul>
+<hr>
+  <h2>Internships and Projects </h2>
+    <ul>
+      <li>“Responsive Website Development and Design” course offered by the University of London,
+          Goldsmiths completed. </li>
+      <li>Automotive Electronics training of 1 year done at KPIT.</li>
+      <li>Four-week internship completed at The Overhaul Division, Hindustan Aeronautics Limited. </li>
+      <li>Worked as part of a team on a mandatory academic project undertaken in the final semester on Fuel
+Automation systems.</li>
+    </ul>
+<hr>
+  <h2>Out of Box Participations and Achievements </h2>
+    <ul>
+      <li>Have participated in and won quiz competitions at various levels. </li>
+      <li>Have hosted cultural events in school and college. </li>
+      <li>Participated in district level Football meets multiple times.</li>
+    </ul>
+<hr>
+  <h2>Personal Details</h2>
+    <ul>
+      <li>DOB: 21st May 1998 </li>
+      <li>Gender: Male </li>
+      <li>Languages known: English, Malayalam, Kannada, Hindi </li>
+      <li>Father’s name: Prasad PK </li>
+    </ul>
 
 </body>
 
