--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <table cellspacing="10">
     <tr>
       <td>
-        <img class="profile" src="pfp1.png" alt="Resumepic" />
+        <a href="pfp1.png"><img class="profile" src="pfp1.png" alt="Resumepic" /></a>
       </td>
       <td>
         <h1>Dennis Prasad</h1>
@@ -67,7 +67,7 @@
   <hr>
   <h2>Internships and Projects </h2>
   <ul>
-    <li>“Responsive Website Development and Design” course offered by the University of London,
+    <li><a href="Course Certificate - University of London.pdf">“Responsive Website Development and Design”</a> course offered by the University of London,
       Goldsmiths completed. </li>
     <li>Automotive Electronics training of 1 year done at KPIT.</li>
     <li>Four-week internship completed at The Overhaul Division, Hindustan Aeronautics Limited. </li>
